--- a/styles/style.css
+++ b/styles/style.css
@@ -75,27 +75,19 @@ nav ul a:hover {
     flex-basis: 100%;
     min-height: 450px;
     padding: 50px;
+
     background-image: url("../images/header.png");
+
+    background-image: image-set(
+        url("../images/header.webp") type(image/webp) 1x,
+        url("../images/header.png")  type(image/png)  1x
+    );
+
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
 }
-    @supports (background-image: -webkit-image-set(url("../images/header.webp") type(image/webp) 1x)) {
-        .hero {
-            background-image: -webkit-image-set(
-                url("../images/header.webp") type(image/webp) 1
-            );
-        }
-    }
-
-    @supports (background-image: image-set(url("../images/header.webp") type(image/webp) 1x)) {
-        .hero {
-            background-image: image-set(
-                url("../images/header.webp") type(image/webp)
-            );
-        }
-    }
 
 p.tagline {
     margin-top: 0;
