--- a/styles/style.css
+++ b/styles/style.css
@@ -75,18 +75,17 @@ nav ul a:hover {
     flex-basis: 100%;
     min-height: 450px;
     padding: 50px;
-
     background-image: url("../images/header.png");
-
-    background-image: image-set(
-        url("../images/header.webp") type(image/webp) 1x,
-        url("../images/header.png")  type(image/png)  1x
-    );
-
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+}
+
+@supports (background-image: url("../images/header.webp")) {
+  .hero {
+    background-image: url("../images/header.webp");
+  }
 }
 
 p.tagline {
